--- a/src/main/resources/i18n/messages.properties
+++ b/src/main/resources/i18n/messages.properties
@@ -1,5 +1,5 @@
 index.email=1447051936@qq.com
-index.QQ=QQ:1447051936
+index.QQ=1447051936
 blog.serurl=127.0.0.1:8080
 nav.index=home
 index.blogDescription=\u65F6\u95F4\u8FC7\u5F97\u597D\u5FEB\u5440\uFF0C\u5DF2\u7ECF\u5927\u4E09\u4E86\u3002\u81EA\u5DF1\u5374\u8FD8\u662F\u4E2A\u83DC\u9E1F\u3002\u3002\u542B\u4E0D\u8D76\u7D27\u809D\uFF1F\u540E\u77E5\u540E\u89C9\uFF0C\u5F00\u59CB\u5E72\u5E72\u5E72\uFF01\uFF01\uFF01\u70ED\u7231\u7F16\u7A0B\uFF0C\u6253\u78E8\u7F16\u7A0B\u6280\u672F\u3002\u975E\u5E38\u6B22\u8FCE\u5927\u5BB6\u6765\u6211\u7684\u535A\u5BA2\u4E00\u6E38,\u7559\u4E0B\u4F60\u4EEC\u7684\u8BC4\u8BBA\u5427\uFF01\u3002
